# COMP6991

./: COMP6991 22T3 — Solving Modern Programming Problems with Rust.html  README.md
COMP6991 22T3 — Solving Modern Programming Problems with Rust_files/: course.css
adventurers/: crate.tar  mark_request.txt
adventurers/adventurers/: Cargo.toml
adventurers/adventurers/src/: adventure_quest.rs  blocks.rs  game.rs  lib.rs  main.rs  mapparser.rs  movement.rs  player.rs
adventurers/adventurers_quest/: Cargo.toml
adventurers/maps/: bad_data.ron  full_game.ron  test.ron  testing_game.ron
final prac/prac_q1/: q1_1.txt  q1_2.txt  q1_3.txt  q1_4.txt
final prac/prac_q4/: q4_1.txt  q4_2.txt
final prac/prac_q5/: q5_1.txt  q5_2.txt  q5_3.txt
final/exam_q1/: q1_1.txt  q1_2.txt  q1_3.txt  q1_4.txt
final/exam_q3/: Cargo.toml
final/exam_q4/: q4_1.txt  q4_2.txt  q4_3.txt
final/exam_q5/: q5_1.txt  q5_2.txt  q5_3.txt
final/exam_q6/: Cargo.toml
iris/: crate.tar  mark_request.txt
iris/iris/: Cargo.toml
iris_rebuild/: mark_request.txt  marking.txt
iris_rebuild/ircat-main/: Cargo.toml
iris_rebuild/iris/: Cargo.toml
iris_rebuild/iris/src/: main.rs
iris_rebuild/iris/src/lib/: channel.rs  handler.rs  mod.rs  plugin.rs  plugin_handler.rs  types.rs  user.rs
lab1/carnival/: Cargo.toml
lab1/mini_grep/: Cargo.toml
lab1/multiverse/: Cargo.toml
lab2/data_analysis/: Cargo.toml  enrolments.psv
lab2/my_caesar/: Cargo.toml
lab2/to_upper/: Cargo.toml
lab3/christmas_tree/: Cargo.toml
lab4/: crate.tar
lec10/: Cargo.toml
lec14/: Note.md
(+69 files in other folders)
