[package]
name = "adventurers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adventurers_quest = { path = "../adventurers_quest" }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.86"
termgame = "1.0.0"
